C++ exporters (OBJ/Collada/USD/Alembic) do not remember the path/filename on subsequent exports #100797

Closed
opened 2022-09-03 14:27:08 +02:00 by Scurest · 8 comments

System Information
Operating system: Linux

Blender Version
Broken: blender-3.4.0-alpha+master.bfa0ee13d539
Worked: never afaict

Short description of error
When exporting a second time, the Python exporters open the filebrowser to the same folder and fill out the same filename as the previous export. The C++ exports always use a default folder/filename.

The other options (eg. checkboxes in the sidebar) are remembered, it's only the path/filename that aren't.

Happens with OBJ/Collada/USD/Alembic.

Exact steps for others to reproduce the error
Make a Cube. Export to (say) OBJ. Navigate to a different folder and set a different filename that what the export window defaults to, and hit Export. Export again. The path/filename are back to the original defaults.

Do the same with (say) OBJ legacy. You'll notice on the second time, the default folder/filename are what you put in the first time.

**System Information** Operating system: Linux **Blender Version** Broken: blender-3.4.0-alpha+master.bfa0ee13d539 Worked: never afaict **Short description of error** When exporting a second time, the Python exporters open the filebrowser to the same folder and fill out the same filename as the previous export. The C++ exports always use a default folder/filename. The other options (eg. checkboxes in the sidebar) are remembered, it's only the path/filename that aren't. Happens with OBJ/Collada/USD/Alembic. **Exact steps for others to reproduce the error** Make a Cube. Export to (say) OBJ. Navigate to a different folder and set a different filename that what the export window defaults to, and hit Export. Export again. The path/filename are back to the original defaults. Do the same with (say) OBJ legacy. You'll notice on the second time, the default folder/filename are what you put in the first time.

Added subscriber: @scurest

Added subscriber: @scurest

Added subscriber: @aras_p

Added subscriber: @aras_p

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, usually would consider this more of a request (rather than a bug), but since the "previous" exporter supported this, will confirm.

Can confirm, usually would consider this more of a request (rather than a bug), but since the "previous" exporter supported this, will confirm.
Aras Pranckevicius changed title from C++ exporters do not remember the path/filename on subsequent exports to C++ exporters (OBJ/Collada/USD/Alembic) do not remember the path/filename on subsequent exports 2022-09-05 14:27:42 +02:00
Aras Pranckevicius self-assigned this 2022-09-05 14:27:42 +02:00

This issue was referenced by 07b547ef96

This issue was referenced by 07b547ef96f1a607e57202e3badb6ffa651e1c41

This issue was referenced by 97bd04d665

This issue was referenced by 97bd04d665cb8c964e9159da94a3c7941cd4841c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:02 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100797
There is no content yet.