source/blender/editors/io/io_gpencil_import.c
@@ -65,7 +65,7 @@ static int wm_gpencil_import_svg_exec(bContext *C, wmOperator *op)
 {
   Scene *scene = CTX_data_scene(C);
 
-  if (!RNA_struct_property_is_set(op->ptr, "filepath") ||
+  if (!RNA_struct_property_is_set_ex(op->ptr, "filepath", false) ||
       !(RNA_struct_find_property(op->ptr, "directory"))) {
     BKE_report(op->reports, RPT_ERROR, "No filename given");
     return OPERATOR_CANCELLED;
